# skreaver

./: .dockerignore  .gitignore  API_STABILITY.md  CHANGELOG.md  CLI_GUIDE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPRECATION_POLICY.md  DEVELOPMENT_PLAN.md  Dockerfile  ERROR_HANDLING_GUIDE.md  LICENSE  MIGRATION.md  README.md  SECURITY_IMPLEMENTATION.md  SRE_RUNBOOK.md  THREAT_MODEL.md  TODO.md  WEBSOCKET_GUIDE.md  WEBSOCKET_SECURITY_FIXES.md  cargo-deny.toml  docker-compose.yml  echo_memory.json  reasoning_memory.json  skreaver-security.toml  standard_tools_memory.json
crates/skreaver/: Cargo.toml
crates/skreaver-a2a/: Cargo.toml  README.md
crates/skreaver-a2a/src/: client.rs  error.rs  lib.rs  server.rs  types.rs
crates/skreaver-a2a/src/types/: agent_card.rs  artifact.rs  message.rs  mod.rs  part.rs  request.rs  streaming.rs  task.rs
crates/skreaver-a2a/tests/: compliance.rs  integration_tests.rs
crates/skreaver-agent/: Cargo.toml  README.md
crates/skreaver-agent/src/: a2a.rs  bridge.rs  discovery.rs  error.rs  lib.rs  mcp.rs  orchestration.rs  protocol_bridge.rs  storage.rs  traits.rs  types.rs
crates/skreaver-agent/src/a2a/: adapter.rs  conversions.rs  mod.rs
crates/skreaver-core/: Cargo.toml  MIGRATION_0.6.0.md
crates/skreaver-core/examples/: nonempty_collections.rs
crates/skreaver-core/src/: agent.rs  database.rs  error.rs  file_memory.rs  in_memory.rs  lib.rs  memory.rs  metadata.rs  namespaced_memory.rs  redis_memory.rs  sanitization.rs  structured_tool_result.rs  tool.rs  validation.rs
crates/skreaver-core/src/agent/: core.rs  mod.rs  simple_stateful.rs  stateful.rs
crates/skreaver-core/src/auth/: api_key.rs  blacklist.rs  encryption.rs  jwt.rs  jwt_revocation.rs  middleware.rs  mod.rs  rbac.rs  storage.rs
crates/skreaver-core/src/collections/: README.md  mod.rs  non_empty_queue.rs  non_empty_vec.rs
crates/skreaver-core/src/database/: health.rs
crates/skreaver-core/src/error/: agent.rs  conversions.rs  memory.rs  mod.rs  tool.rs  types.rs
crates/skreaver-core/src/identifiers/: mod.rs  validation.rs
crates/skreaver-core/src/memory/: keys.rs
crates/skreaver-core/src/security/: audit.rs  config.rs  errors.rs  fs.rs  limits.rs  mod.rs  policy.rs  secret.rs  secure_tool.rs  validated_fd.rs  validated_url.rs  validation.rs
crates/skreaver-gateway/: Cargo.toml
crates/skreaver-gateway/src/: detection.rs  error.rs  lib.rs  registry.rs
crates/skreaver-gateway/src/translation/: a2a_to_mcp.rs  mcp_to_a2a.rs  mod.rs
crates/skreaver-gateway/tests/: gateway_integration.rs
crates/skreaver-guardrails/: Cargo.toml
crates/skreaver-guardrails/src/: agent.rs  anomaly.rs  approval.rs  builder.rs  config.rs  dynamic.rs  error.rs  lib.rs  policy.rs  preset.rs  rule.rs
crates/skreaver-guardrails/src/rules/: input_validation.rs  message_size.rs  mod.rs  output_scan.rs  rate_limit.rs  tool_filter.rs
crates/skreaver-http/: Cargo.toml
crates/skreaver-http/src/: lib.rs
crates/skreaver-http/src/openapi/: generator.rs  mod.rs  ui.rs  validation.rs
crates/skreaver-http/src/runtime/: agent_builders.rs  agent_error.rs  agent_factory.rs  agent_instance.rs  agent_lifecycle.rs  agent_status.rs  api_types.rs  auth.rs  auth_token.rs  backpressure.rs  config.rs  connection_limits.rs  coordinator.rs  error.rs  errors.rs  http.rs  mod.rs  performance.rs  rate_limit.rs  router.rs  (+4 more)
crates/skreaver-http/tests/: auth_integration_tests.rs  connection_limits_integration_tests.rs  env_config_tests.rs  graceful_shutdown_tests.rs  health_integration_tests.rs  rbac_integration_tests.rs  security_config_tests.rs  websocket_security_tests.rs
crates/skreaver-mcp/: Cargo.toml
crates/skreaver-mcp/src/: adapter.rs  bridge.rs  elicitation.rs  error.rs  lib.rs  server.rs  tasks.rs
crates/skreaver-mcp/tests/: bridge_integration.rs
crates/skreaver-memory/: Cargo.toml
crates/skreaver-memory/src/: admin.rs  file_memory.rs  in_memory.rs  lib.rs  namespaced.rs  namespaced_memory.rs  postgres_memory.rs  redis_memory.rs  sqlite_memory.rs
crates/skreaver-memory/tests/: redis_connection_state.rs  redis_type_safety.rs
crates/skreaver-mesh/: Cargo.toml  README.md
crates/skreaver-mesh/src/: backpressure.rs  dlq.rs  error.rs  lib.rs  mesh.rs  message.rs  message_id_improved.rs  message_improved.rs  metrics.rs  patterns.rs  payload_improved.rs  redis.rs  redis_improved.rs  types.rs  types_improved.rs
crates/skreaver-mesh/tests/: integration_tests.rs
crates/skreaver-observability/: Cargo.toml
crates/skreaver-observability/src/: health.rs  lib.rs  metrics.rs  otel.rs  tags.rs  trace.rs
crates/skreaver-testing/: Cargo.toml  GOLDEN_TESTS.md
crates/skreaver-testing/src/: benchmarks.rs  cli.rs  criterion_parser.rs  golden.rs  golden_harness.rs  integration.rs  lib.rs  macros.rs  mock_tools.rs  regression.rs  test_harness.rs
crates/skreaver-tools/: Cargo.toml
crates/skreaver-tools/src/: core.rs  lib.rs  mod.rs  registry.rs  secure_registry.rs
crates/skreaver/src/: lib.rs
skreaver-cli/: Cargo.toml  reasoning_memory.json
skreaver-cli/src/: lib.rs  main.rs  perf.rs
skreaver-cli/src/agents/: echo.rs  mod.rs  multi_tool.rs  reasoning.rs  reasoning_tests.rs  standard_tools.rs  tests.rs
skreaver-cli/src/scaffold/: loader.rs  mod.rs  templates.rs
skreaver-cli/templates/project/: .gitignore  README.md.hbs
skreaver-cli/templates/tools/: api_client.rs.hbs  calculator.rs.hbs  custom.rs.hbs  database.rs.hbs  filesystem.rs.hbs  http_client.rs.hbs  workflow.rs.hbs
skreaver-py/: Cargo.toml  README.md  pyproject.toml
skreaver-py/examples/: crewai_a2a_tool.py  crewai_mcp_tools.py  crewai_memory.py  langchain_a2a_tool.py  langchain_mcp_server.py  langchain_memory.py
skreaver-py/python/skreaver/: __init__.py  __init__.pyi
skreaver-py/src/: errors.rs  lib.rs
skreaver-py/src/a2a/: client.rs  mod.rs  types.rs
skreaver-py/src/gateway/: mod.rs
skreaver-py/src/mcp/: mod.rs  server.rs
skreaver-py/src/memory/: mod.rs
skreaver-py/tests/: __init__.py  test_a2a_types.py  test_async_client.py  test_gateway.py  test_mcp_server.py  test_mcp_types.py  test_memory.py
(+232 files in other folders)
