[package]
name = "skreaver-workspace"
version = "0.1.0"
edition = "2024"
authors = ["Oleksandr Husiev <ohusiev@icloud.com>"]
license = "MIT"
description = "Skreaver — Rust-based open agentic infrastructure platform"
repository = "https://github.com/shurankain/skreaver"
homepage = "https://ohusiev.com"
keywords = ["agent", "infrastructure", "ai", "rust"]
categories = ["development-tools", "ai"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
humantime = "2.2"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# HTTP and web
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"] }

# Storage and cache
redis = { version = "0.32.5", features = ["tokio-comp"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-postgres = "0.7"
dashmap = "6.1"

# Testing and development
tokio-test = "0.4"
tempfile = "3.21"
rand = "0.9"
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }

# Security and validation
jsonwebtoken = "9.3"
regex = "1.11"
html-escape = "0.2"
base64 = "0.22"

# OpenAPI
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }

# Utilities
once_cell = "1.21"
governor = "0.10"
futures = "0.3"
tokio-stream = "0.1"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Testing external dependencies
wiremock = "0.5"
reqwest = { version = "0.12", features = ["json"] }
quick-xml = { version = "0.38", features = ["serialize"] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
humantime = { workspace = true }
thiserror = { workspace = true }
# Examples dependencies (only loaded when running examples)
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
chrono = { workspace = true }
# Core crates
skreaver-core = { path = "crates/skreaver-core" }
skreaver-memory = { path = "crates/skreaver-memory" }
skreaver-tools = { path = "crates/skreaver-tools" }
skreaver-http = { path = "crates/skreaver-http" }
# Meta crate for examples
skreaver = { path = "crates/skreaver", features = ["testing"] }

# Benchmarking dependencies  
[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
skreaver-testing = { path = "crates/skreaver-testing" }
# Only for benchmarks - not compiled in normal builds
criterion = { workspace = true }

[profile.dev]
# Faster debug builds for development
debug = 1
incremental = true

[profile.release]
# Optimized for CI build speed while maintaining performance
lto = "thin"
codegen-units = 16
panic = "abort"
strip = "symbols"

[profile.test]
# Faster test compilation
debug = 1
opt-level = 1

[profile.bench]
# Full optimization for benchmarks
lto = true
codegen-units = 1

[workspace]
members = ["skreaver-cli", "crates/skreaver-core", "crates/skreaver-memory", "crates/skreaver-tools", "crates/skreaver-http", "crates/skreaver-testing", "crates/skreaver"]
resolver = "2"

# Benchmark configuration
[[bench]]
name = "simple_benchmarks" 
harness = false

[[bench]]
name = "realistic_benchmarks"
harness = false

[[bench]]
name = "comprehensive_benchmark"
harness = false

[[bench]]
name = "optimized_benchmark"
harness = false

[[bench]]
name = "quick_benchmark"
harness = false
