[package]
name = "skreaver-workspace"
version = "0.5.0"
edition = "2024"
authors = ["Oleksandr Husiev <ohusiev@icloud.com>"]
license = "MIT"
description = "Skreaver — Rust-based open agentic infrastructure platform"
repository = "https://github.com/shurankain/skreaver"
homepage = "https://ohusiev.com"
keywords = ["agent", "infrastructure", "ai", "rust"]
categories = ["development-tools", "ai"]

[features]
default = ["security-basic"]
security-basic = ["skreaver-core/security-basic"]
security-full = ["skreaver-core/security-full"]
security-audit = ["skreaver-core/security-audit"]
security-content-scanning = ["skreaver-core/security-content-scanning"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
tokio = { version = "1.47.1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "sync",
  "time",
  "signal",
] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
tracing = "0.1.41"
humantime = "2.3.0"
thiserror = "2.0.16"
chrono = { version = "0.4", features = ["serde"] }

# HTTP and web
axum = { version = "0.8.4", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "cors",
  "trace",
  "timeout",
  "limit",
] }

# Storage and cache
redis = { version = "0.32", features = ["tokio-comp", "cluster"] }
deadpool-redis = "0.22.0"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-postgres = "0.7"
dashmap = "6.1"

# Testing and development
tokio-test = "0.4"
tempfile = "3.22.0"
rand = "0.9"
criterion = { version = "0.7", features = ["async_tokio"] }

# Advanced testing dependencies
proptest = "1.5"  # Property-based testing
cargo-fuzz = "0.12"  # Fuzzing support
quickcheck = "1.0"  # Alternative property testing
quickcheck_macros = "1.0"  # Quickcheck macros
fake = { version = "2.9", features = ["derive"] }  # Test data generation
rstest = "0.23"  # Parametrized tests

# Security and validation
jsonwebtoken = "9"
regex = "1"
html-escape = "0.2"
base64 = "0.22"
sha2 = "0.10"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Utilities
once_cell = "1"
governor = "0.10"
futures = "0.3"
tokio-stream = "0.1"
libc = "0.2"
async-trait = "0.1.89"

# CLI dependencies
clap = { version = "4.5.47", features = ["derive"] }
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "fmt",
  "json",
] }

# Testing external dependencies
wiremock = "0.6.5"
reqwest = { version = "0.12.23", features = ["json"] }
quick-xml = { version = "0.38", features = ["serialize"] }

# Observability dependencies - Latest stable versions with version consistency
prometheus = "0.14.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.31.0"

# Platform dependencies - force consistent versions
windows-sys = "0.61"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
humantime = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
# Examples dependencies (only loaded when running examples)
axum = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
# Core crates
skreaver-core = { path = "crates/skreaver-core" }
skreaver-memory = { path = "crates/skreaver-memory" }
skreaver-tools = { path = "crates/skreaver-tools" }
skreaver-http = { path = "crates/skreaver-http" }
skreaver-mesh = { path = "crates/skreaver-mesh", features = ["redis"] }
# Meta crate for examples
skreaver = { path = "crates/skreaver", features = ["testing"] }

# Testing and benchmarking dependencies
[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
rand = { workspace = true }
skreaver-testing = { path = "crates/skreaver-testing" }
skreaver-observability = { path = "crates/skreaver-observability" }
# Benchmarking - not compiled in normal builds
criterion = { workspace = true }
# Advanced testing
proptest = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
fake = { workspace = true }
rstest = { workspace = true }

[profile.dev]
# Faster debug builds for development
debug = 1
incremental = true

[profile.release]
# Optimized for CI build speed while maintaining performance
lto = "thin"
codegen-units = 16
panic = "abort"
strip = "symbols"

[profile.test]
# Faster test compilation
debug = 1
opt-level = 1

[profile.bench]
# Full optimization for benchmarks
lto = true
codegen-units = 1

[workspace]
members = [
  "skreaver-cli",
  "crates/skreaver-core",
  "crates/skreaver-memory",
  "crates/skreaver-tools",
  "crates/skreaver-http",
  "crates/skreaver-testing",
  "crates/skreaver-observability",
  "crates/skreaver-mesh",
  "crates/skreaver", "crates/skreaver-mcp",
]
resolver = "2"

# Linting configuration
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
too_many_arguments = "allow"
type_complexity = "allow"

# Benchmark configuration
[[bench]]
name = "simple_benchmarks"
harness = false

[[bench]]
name = "realistic_benchmarks"
harness = false

[[bench]]
name = "comprehensive_benchmark"
harness = false

[[bench]]
name = "optimized_benchmark"
harness = false

[[bench]]
name = "quick_benchmark"
harness = false

[[bench]]
name = "production_benchmark"
harness = false

[[bench]]
name = "standard_benchmark"
harness = false

[[bench]]
name = "memory_operations"
harness = false
