[package]
name = "skreaver-cli"
version = "0.5.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
skreaver = { path = "../crates/skreaver" }
skreaver-testing = { path = "../crates/skreaver-testing" }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
handlebars = "5.0"
