[package]
name = "skreaver-a2a"
version = "0.5.0"
edition = "2024"
description = "Agent2Agent (A2A) protocol types and client for Skreaver"
license = "MIT"

[features]
default = []
client = ["reqwest", "futures", "tokio-stream", "async-trait"]
server = ["axum", "tower", "tower-http", "futures", "tokio-stream", "async-trait", "async-stream"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP client (optional, for client feature)
reqwest = { workspace = true, optional = true, features = ["json", "stream"] }

# Streaming support
futures = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

# HTTP server (optional, for server feature)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Async stream generators
async-stream = { version = "0.3", optional = true }

# URL handling
url = "2.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for identifiers
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync", "net"] }
futures = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }
axum = { workspace = true }

[lints]
workspace = true
