[package]
name = "skreaver-core"
version = "0.3.0"
edition = "2024"
authors = ["Oleksandr Husiev <ohusiev@icloud.com>"]
license = "MIT"
description = "Core traits and types for the Skreaver agent framework"
repository = "https://github.com/shurankain/skreaver"
homepage = "https://ohusiev.com"
keywords = ["agent", "infrastructure", "ai", "rust", "core"]
categories = ["development-tools", "ai"]

[features]
default = ["security-basic"]

# Security feature gates
security-basic = ["regex", "sha2", "once_cell"]
security-full = ["security-basic", "security-audit", "security-content-scanning"]  
security-audit = ["chrono"]
security-content-scanning = ["regex/perf"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true, optional = true }
time = { version = "0.3", features = ["std", "macros", "formatting", "serde"] }
tracing = { workspace = true }
tokio = { workspace = true }
regex = { version = "1.11", optional = true }
sha2 = { version = "0.10", optional = true }
toml = "0.8"
url = "2.5"
once_cell = { version = "1.19", optional = true }

