[package]
name = "skreaver-core"
version = "0.4.0"
edition = "2024"
authors = ["Oleksandr Husiev <ohusiev@icloud.com>"]
license = "MIT"
description = "Core traits and types for the Skreaver agent framework"
repository = "https://github.com/shurankain/skreaver"
homepage = "https://ohusiev.com"
keywords = ["agent", "infrastructure", "ai", "rust", "core"]
categories = ["development-tools", "ai"]

[features]
default = ["security-basic"]

# Security feature gates
security-basic = ["regex", "once_cell"]
security-full = ["security-basic", "security-audit", "security-content-scanning"]  
security-audit = []
security-content-scanning = ["regex/perf"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
time = { version = "0.3", features = ["std", "macros", "formatting", "serde"] }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
skreaver-observability = { path = "../skreaver-observability", version = "0.4.0", optional = true }
regex = { version = "1.11", optional = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
toml = "0.8"
url = "2.5"
once_cell = { version = "1.19", optional = true }

# Encryption for secure storage
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }

# Token revocation with Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

# Resource monitoring (cross-platform)
sysinfo = "0.32"

