[package]
name = "skreaver-gateway"
version = "0.6.0"
edition = "2024"
description = "Protocol gateway for MCP <-> A2A translation in Skreaver"
license = "MIT"

[features]
default = []

[dependencies]
# Skreaver protocol crates
skreaver-mcp = { path = "../skreaver-mcp", version = "0.6.0" }
skreaver-a2a = { path = "../skreaver-a2a", version = "0.6.0" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID for identifiers
uuid = { workspace = true }

# Async utilities
futures = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }

[lints]
workspace = true
