[package]
name = "skreaver-http"
version = "0.1.0"
edition = "2024"
authors = ["Oleksandr Husiev <ohusiev@icloud.com>"]
license = "MIT"
description = "HTTP runtime for Skreaver agent infrastructure"
repository = "https://github.com/shurankain/skreaver"
homepage = "https://ohusiev.com"
keywords = ["agent", "http", "runtime", "ai", "rust"]
categories = ["web-programming", "development-tools"]

[features]
default = ["auth", "openapi", "compression", "streaming"]
auth = []
openapi = []
openapi-ui = ["openapi"]
compression = []
streaming = []
unstable-websocket = ["streaming"]

[dependencies]
# Core dependencies
skreaver-core = { path = "../skreaver-core", version = "0.1.0" }
skreaver-tools = { path = "../skreaver-tools", version = "0.1.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tracing = "0.1"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP runtime dependencies
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit"] }

# Authentication and security
jsonwebtoken = "9.0"
once_cell = "1.0"

# Rate limiting
governor = "0.6"

# Streaming and async
futures = "0.3"
tokio-stream = "0.1"

# Time formatting
humantime = "2.1"

# OpenAPI documentation
utoipa = { version = "4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }

# Security and validation
regex = "1.0"
html-escape = "0.2"
base64 = "0.21"
rand = "0.8"


