[package]
name = "skreaver-http"
version = "0.5.0"
edition = "2024"
authors = ["Oleksandr Husiev <ohusiev@icloud.com>"]
license = "MIT"
description = "HTTP runtime for Skreaver agent infrastructure"
repository = "https://github.com/shurankain/skreaver"
homepage = "https://ohusiev.com"
keywords = ["agent", "http", "runtime", "ai", "rust"]
categories = ["web-programming", "development-tools"]

[features]
default = ["auth", "openapi", "compression", "streaming", "websocket"]
auth = []
openapi = []
openapi-ui = ["openapi"]
compression = []
streaming = []
websocket = ["streaming"]

[dependencies]
# Core dependencies
skreaver-core = { path = "../skreaver-core", version = "0.5.0" }
skreaver-tools = { path = "../skreaver-tools", version = "0.5.0" }
skreaver-observability = { path = "../skreaver-observability", version = "0.5.0", features = ["metrics", "health", "tracing", "openapi"] }

# Prometheus for metrics endpoint
prometheus = { workspace = true }

# Async traits
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP runtime dependencies
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Authentication and security
jsonwebtoken = { workspace = true }
once_cell = { workspace = true }

# Rate limiting
governor = { workspace = true }

# Streaming and async
futures = { workspace = true }
tokio-stream = { workspace = true }

# Time formatting
humantime = { workspace = true }

# OpenAPI documentation
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
serde_yaml = { workspace = true }

# Security and validation
regex = { workspace = true }
html-escape = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# System metadata
hostname = "0.4"
sysinfo = "0.32"

[dev-dependencies]
serial_test = "3.2.0"

