[package]
name = "skreaver-mcp"
version = "0.5.0"
edition = "2024"
description = "Model Context Protocol (MCP) integration for Skreaver"
license = "MIT"

[dependencies]
# MCP SDK
rmcp = { version = "0.2.0", features = ["server", "transport-io"] }

# Skreaver crates
skreaver-core = { path = "../skreaver-core", version = "0.5.0" }
skreaver-tools = { path = "../skreaver-tools", version = "0.5.0" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = { workspace = true }

# JSON Schema (required by rmcp)
schemars = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true
