[package]
name = "skreaver-mcp"
version = "0.5.0"
edition = "2024"
description = "Model Context Protocol (MCP) integration for Skreaver"
license = "MIT"

[features]
default = ["server"]
server = []
client = ["rmcp/client", "rmcp/transport-child-process"]

[dependencies]
# MCP SDK - upgraded to 0.14.0 for 2025-11-25 spec (tasks, elicitation, tool annotations)
rmcp = { version = "0.14.0", features = ["server", "transport-io"] }

# Skreaver crates
skreaver-core = { path = "../skreaver-core", version = "0.5.0" }
skreaver-tools = { path = "../skreaver-tools", version = "0.5.0" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = { workspace = true }

# UUID for task identifiers
uuid = { workspace = true }

# Time handling for task timestamps
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true
