[package]
name = "skreaver-memory"
version = "0.3.0"
edition = "2024"
authors = ["Oleksandr Husiev <ohusiev@icloud.com>"]
license = "MIT"
description = "Memory backend implementations for Skreaver agent infrastructure"
repository = "https://github.com/shurankain/skreaver"
homepage = "https://ohusiev.com"
keywords = ["agent", "memory", "storage", "ai", "rust"]
categories = ["development-tools", "database"]

[features]
default = []
sqlite = ["dep:rusqlite", "dep:rand"]
postgres = ["dep:tokio-postgres", "dep:tokio"]
redis = ["dep:redis", "dep:deadpool-redis", "dep:tokio"]

[dependencies]
# Core dependency
skreaver-core = { path = "../skreaver-core", version = "0.3.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Optional backend dependencies
tokio = { workspace = true, features = ["fs"], optional = true }
redis = { workspace = true, optional = true }
deadpool-redis = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
tokio-postgres = { workspace = true, features = [
  "with-serde_json-1",
  "with-chrono-0_4",
], optional = true }
rand = { workspace = true, optional = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
